--- a/front/src/Components/NewsLetter/NewsLetter.scss
+++ b/front/src/Components/NewsLetter/NewsLetter.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: auto;
+    margin: 500px auto;
     padding: 0 140px;
     margin-bottom: 150px;
     background:linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
