--- a/front/src/Components/Navbar/Navbar.css
+++ b/front/src/Components/Navbar/Navbar.css
@@ -1,8 +1,12 @@
 .navbar {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   padding: 16px;
   box-shadow: 0 1px 3px -2px black;
+}
+.navbar__dropdown {
+  display: none;
 }
 .navbar__logo {
   display: flex;
@@ -79,9 +83,144 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: rgb(255, 255, 255);
   border-radius: 15px;
   margin-left: -32px;
   margin-top: -25px;
   font-size: 14px;
+}
+
+@media (max-width: 1280px) {
+  .navbar {
+    padding: 12px 50px;
+  }
+  .navbar__logo img {
+    width: 30px;
+  }
+  .navbar__logo p {
+    font-size: 25px;
+  }
+  .navbar__menu {
+    gap: 30px;
+    font-size: 16px;
+  }
+  .navbar__login_cart {
+    gap: 30px;
+  }
+  .navbar__login_cart button {
+    padding: 9px 20px;
+    width: 120px;
+    height: 45px;
+    font-size: 16px;
+  }
+  .navbar__login_cart__counter {
+    margin-left: -40px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 1024px) {
+  .navbar {
+    padding: 12px 30px;
+  }
+  .navbar__logo img {
+    width: 40px;
+  }
+  .navbar__logo p {
+    font-size: 25px;
+  }
+  .navbar__menu {
+    gap: 25px;
+    font-size: 14px;
+  }
+  .navbar__login_cart {
+    gap: 30px;
+  }
+  .navbar__login_cart button {
+    width: 80px;
+    height: 35px;
+    font-size: 14px;
+  }
+  .navbar__login_cart__counter {
+    width: 18px;
+    height: 18px;
+    margin-left: -40px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 800px) {
+  .navbar {
+    padding: 10px 0px;
+  }
+  .navbar__dropdown {
+    display: block;
+    width: 30px;
+    rotate: -90deg;
+    transition: 0.5s;
+  }
+  .navbar__dropdown.open {
+    transform: rotate(90deg);
+  }
+  .navbar__logo img {
+    width: 40px;
+  }
+  .navbar__logo p {
+    font-size: 25px;
+  }
+  .navbar__menu {
+    display: none;
+    height: 80px;
+    width: 100%;
+    position: absolute;
+    background-color: white;
+    justify-content: center;
+    top: 50px;
+  }
+  .navbar__menu-visible {
+    display: flex;
+  }
+  .navbar__login_cart {
+    gap: 30px;
+  }
+  .navbar__login_cart button {
+    width: 80px;
+    height: 35px;
+    font-size: 14px;
+  }
+  .navbar__login_cart__counter {
+    width: 18px;
+    height: 18px;
+    margin-left: -40px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 500px) {
+  .navbar {
+    padding: 8px 0px;
+    gap: 0;
+  }
+  .navbar__dropdown {
+    display: block;
+    width: 30px;
+    rotate: -90deg;
+    transition: 0.5s;
+  }
+  .navbar__dropdown.open {
+    transform: rotate(90deg);
+  }
+  .navbar__logo {
+    transform: scale(0.8);
+  }
+  .navbar__logo img {
+    width: 40px;
+  }
+  .navbar__logo p {
+    font-size: 25px;
+  }
+  .navbar__menu {
+    height: 70px;
+    top: 50px;
+  }
+  .navbar__login_cart {
+    transform: scale(0.8);
+  }
 }/*# sourceMappingURL=Navbar.css.map */
