--- a/front/src/Pages/CSS/LoginSignup.scss
+++ b/front/src/Pages/CSS/LoginSignup.scss
@@ -48,6 +48,7 @@ $grey: #5c5c5c;
             span{
                 color: $button-color;
                 font-weight: 600;
+                cursor: pointer;
             }
         }
         &__agree{
